asset/src/scss/content/_heroes.scss
// *****************************************************************
// HEROES
// *****************************************************************
section.hero {
	width: 100%;
	height: 100%;
	display: block;
	background: #CCC;
	overflow: hidden;
	position: relative;
	z-index: 5;

	img {
		min-height: 100%;
		min-width: 100%;
		position: fixed;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
		z-index: 1;	
	}

	.gradient {
		width: 100%;
		height: 100%;
		display: block;
		position: absolute;
		top: 0;
		left: 0;
		z-index: 2;
		opacity: 0.8;
		// background-image: linear-gradient(to top right, $thered 10%, $theblue 100%);
		// filter: saturate(1);
	}
}

$pointerHeight: 100px;

// POINTER
.pointer {
	width: 100%;
	height: $pointerHeight;
	position: absolute;
	bottom: 0;
	left: 0;
	z-index: 5;

	&::before, &::after {
		content: '';
		width: 70%;
		height: 100%;
		display: block;
		background: $white;
		position: absolute;
		top: 0;
	}

	&::before {
		right: 50%;
		transform: skew(30deg);
		transform-origin: bottom right;
	}

	&::after {
		left: 50%;
		transform: skew(-30deg);
		transform-origin: bottom left;
	}
}

// ARROW
.hero {
	.arrow {
		width: $pointerHeight / 5;
		height: $pointerHeight / 5;
		display: block;
		position: fixed;
		z-index: 6;
		bottom: 20px;
		left: 50%;
		margin-left: 0 - ($pointerHeight / 10);
		// background: #000;
		opacity: 0.5;
		cursor: pointer;
		animation: arrowBounce 3s infinite;

		&::before, &::after {
			content: '';
			width: 1px;
			height: 100%;
			display: block;
			background: $white;
			position: absolute;
			top: 0;
		}

		&::before {
			right: 50%;
			transform: rotate(30deg);
			transform-origin: bottom right;
		}

		&::after {
			left: 50%;
			transform: rotate(-30deg);
			transform-origin: bottom left;
		}
	}
}

@keyframes arrowBounce {
	0%, 60%, 70%, 80%, 100% {
		transform: translateY(0);
	}
	65% {
		transform: translateY(-20px);
	}
	75% {
		transform: translateY(-10px);
	}
}

// *****************************************************************
// HERO WORDAGE (including home page)
// *****************************************************************
.page-header {
	$projectIconHeight: 21px;

	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 3;
	color: $white;

	@include breakpoint(medium) {
		width: 40%;
	}

	@include breakpoint(large) {
		width: 30%;
	}

	h1.title {
		line-height: 1em;
		margin-left: -0.15em;
		position: relative;
		padding-bottom: $projectIconHeight;
	}

	p {
		width: 100%;
		display: inline-block;
		padding: $projectIconHeight 0 0 0;
		margin: 0;
	}

	.icon-wrap {
		height: $projectIconHeight;
		display: block;
		width: 100%;
		position: relative;

		&::before, &::after {
			content: '';
			width: 35%;
			height: 1px;
			background: $white;
			display: block;
			position: absolute;
			bottom: $projectIconHeight / 2;

			@include breakpoint(large) {
				width: 41%;
			}
		}

		&::before {
			left: 0;
		}

		&::after {
			right: 0;
		}
	}

	.icon {
		
		height: $projectIconHeight;
		//the height is 86.6% of the width
		width: ($projectIconHeight / 86.6) * 100;
		position: absolute;
		bottom: 0;
		left: 50%;
		margin-left: 0 - ($projectIconHeight / 2);

		svg {
			position: absolute;
			top: 0;
			left: 0;
			height: 100%;
			width: 100%;
			fill: $white;
		}
	}
}

